[gd_scene format=3 uid="uid://dfa7acfcvc3yy"]

[ext_resource type="Script" uid="uid://dmg143wfbe7nl" path="res://src/player/player.gd" id="1_0v0ik"]
<<<<<<< Updated upstream
[ext_resource type="PackedScene" uid="uid://cr05qs3lbrrmq" path="res://src/player/attacks/attack_default/default_attack.tscn" id="2_rgyib"]
=======
[ext_resource type="PackedScene" uid="uid://c2wsqbmxwudpk" path="res://src/player/attacks/blender_attack.tscn" id="2_2smqc"]
>>>>>>> Stashed changes
[ext_resource type="Texture2D" uid="uid://b0f3n0netrmcw" path="res://assets/sprites/player_animation_sheet_final.png" id="3_2smqc"]
[ext_resource type="Script" uid="uid://ca03ma24caxns" path="res://src/player/state_machine/idle_state.gd" id="3_fv2d4"]
[ext_resource type="PackedScene" uid="uid://csjhmv4df2yek" path="res://src/player/attacks/attack_konduktor/konduktor_attack.tscn" id="3_rl62b"]
[ext_resource type="Script" uid="uid://bbaeadmys6i6j" path="res://src/player/state_machine/state_machine.gd" id="4_hg6s5"]
[ext_resource type="Script" uid="uid://bat84jucrkcqd" path="res://src/player/state_machine/walk_state.gd" id="4_p842g"]
[ext_resource type="Script" uid="uid://djx2bb1xw15vw" path="res://src/player/state_machine/jump_state.gd" id="5_dh4si"]
[ext_resource type="Script" uid="uid://crqfi21e4cwo5" path="res://src/player/state_machine/fall_state.gd" id="6_tcq0w"]
[ext_resource type="Script" uid="uid://bqmioivprkl42" path="res://src/player/mask_system.gd" id="7_boad6"]
[ext_resource type="Script" uid="uid://uck8pyr0up71" path="res://src/player/state_machine/attack_state.gd" id="9_8t03j"]
[ext_resource type="Script" uid="uid://dvx22adu7ly4a" path="res://src/player/state_machine/death_state.gd" id="10_2smqc"]
[ext_resource type="Script" uid="uid://debf2l4kldxlb" path="res://src/player/damage_system/damage_target.gd" id="11_2ieo8"]
[ext_resource type="Script" uid="uid://bwaqdqdr1hous" path="res://src/player/player_ui.gd" id="12_ebec5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2smqc"]
radius = 34.0
height = 128.0

[sub_resource type="Animation" id="Animation_p842g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackParent/AttackHolder:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 37)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explosion:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [27]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2smqc")]
}

[sub_resource type="Animation" id="Animation_rl62b"]
resource_name = "attack_default"
length = 0.21428572
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.071428575, 0.14285715, 0.21428573, 0.2857143, 0.35714287, 0.42857146),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22, 23, 24, 25]
}

[sub_resource type="Animation" id="Animation_vwsmr"]
resource_name = "attack_konduktor"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2smqc")]
}

[sub_resource type="Animation" id="Animation_wlj80"]
resource_name = "idle"
length = 0.35714287
loop_mode = 1
step = 0.071428575
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.071428575, 0.14285715, 0.21428573, 0.2857143),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_6bm8s"]
resource_name = "jump"
step = 0.07

[sub_resource type="Animation" id="Animation_rgyib"]
resource_name = "player_attack_default"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackParent/AttackHolder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19999999, 0.39999998),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 37), Vector2(80, 24), Vector2(4, 33)]
}

[sub_resource type="Animation" id="Animation_oyld2"]
resource_name = "player_death"
length = 0.5
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.14285715, 0.21428573, 0.2857143, 0.35714287, 0.42857143),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [27, 28, 29, 30, 31, 32]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.21428573),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_dh4si"]
resource_name = "player_temp_idle"
length = 0.4
loop_mode = 1
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 3]
}

[sub_resource type="Animation" id="Animation_innbq"]
resource_name = "player_temp_jump"
length = 0.010009678
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_tcq0w"]
resource_name = "player_temp_walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(7.450581e-09, 0.10000001, 0.20000002, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_hrerp"]
resource_name = "walk"
length = 0.85714287
loop_mode = 1
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.071428575, 0.14285715, 0.21428573, 0.2857143, 0.35714287, 0.42857146, 0.5, 0.5714286, 0.6428572, 0.71428573, 0.7857143),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tcq0w"]
_data = {
&"RESET": SubResource("Animation_p842g"),
&"attack_default": SubResource("Animation_rl62b"),
&"attack_konduktor": SubResource("Animation_vwsmr"),
&"idle": SubResource("Animation_wlj80"),
&"jump": SubResource("Animation_6bm8s"),
&"player_attack_default": SubResource("Animation_rgyib"),
&"player_death": SubResource("Animation_oyld2"),
&"player_temp_idle": SubResource("Animation_dh4si"),
&"player_temp_jump": SubResource("Animation_innbq"),
&"player_temp_walk": SubResource("Animation_tcq0w"),
&"walk": SubResource("Animation_hrerp")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6k8r"]
size = Vector2(46, 68)

[node name="PlayerNew" type="CharacterBody2D" unique_id=1053524098 node_paths=PackedStringArray("mask_parent", "state_machine")]
collision_layer = 2
script = ExtResource("1_0v0ik")
default_attack = ExtResource("2_rgyib")
mask_parent = NodePath("MaskParent")
state_machine = NodePath("StateMachine")
konduktor_attack = ExtResource("3_rl62b")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1375468071]
texture_filter = 1
texture = ExtResource("3_2smqc")
hframes = 7
vframes = 5
region_rect = Rect2(0, 0, 32, 32)

[node name="Explosion" type="Sprite2D" parent="." unique_id=257244923]
visible = false
texture_filter = 1
texture = ExtResource("3_2smqc")
hframes = 7
vframes = 5
frame = 27
region_rect = Rect2(0, 0, 32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=503636172]
position = Vector2(3, 6)
shape = SubResource("CapsuleShape2D_2smqc")
debug_color = Color(0.7041554, 0.45410562, 0.5027783, 0.41960785)

[node name="StateMachine" type="Node" parent="." unique_id=1603580362 node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_hg6s5")
initial_state = NodePath("IdleState")
metadata/_custom_type_script = "uid://bbaeadmys6i6j"

[node name="IdleState" type="Node" parent="StateMachine" unique_id=2043604641]
script = ExtResource("3_fv2d4")
metadata/_custom_type_script = "uid://ca03ma24caxns"

[node name="WalkState" type="Node" parent="StateMachine" unique_id=1231467133]
script = ExtResource("4_p842g")
metadata/_custom_type_script = "uid://bat84jucrkcqd"

[node name="JumpState" type="Node" parent="StateMachine" unique_id=723755170]
script = ExtResource("5_dh4si")
metadata/_custom_type_script = "uid://djx2bb1xw15vw"

[node name="FallState" type="Node" parent="StateMachine" unique_id=564122780]
script = ExtResource("6_tcq0w")
metadata/_custom_type_script = "uid://crqfi21e4cwo5"

[node name="AttackState" type="Node" parent="StateMachine" unique_id=625954773]
script = ExtResource("9_8t03j")
metadata/_custom_type_script = "uid://crqfi21e4cwo5"

[node name="DeathState" type="Node" parent="StateMachine" unique_id=758476619]
script = ExtResource("10_2smqc")
metadata/_custom_type_script = "uid://dvx22adu7ly4a"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=340885158]
libraries/ = SubResource("AnimationLibrary_tcq0w")

[node name="MaskSystem" type="Area2D" parent="." unique_id=85479215]
script = ExtResource("7_boad6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MaskSystem" unique_id=1915748846]
position = Vector2(1, 28)
shape = SubResource("RectangleShape2D_g6k8r")

[node name="AttackParent" type="Node2D" parent="." unique_id=923474934]

[node name="AttackHolder" type="Node2D" parent="AttackParent" unique_id=1126711854]
position = Vector2(0, 37)

[node name="DamageTarget" type="Node2D" parent="." unique_id=724562669]
script = ExtResource("11_2ieo8")
max_health = 15

[node name="UI" type="Node2D" parent="." unique_id=328246206]
script = ExtResource("12_ebec5")

[node name="HealthBar" type="ProgressBar" parent="UI" unique_id=2105303785]
modulate = Color(0.96151835, 4.4520943e-06, 9.62615e-07, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -104.0
offset_right = 24.57
offset_bottom = -95.28
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
value = 50.0
show_percentage = false

[node name="MaskParent" type="Node2D" parent="." unique_id=1472926769]

[connection signal="on_damage_received" from="DamageTarget" to="UI" method="_on_damage_target_on_damage_received"]
[connection signal="on_death" from="DamageTarget" to="." method="_begin_death"]
[connection signal="on_death" from="DamageTarget" to="UI" method="_on_death"]
[connection signal="on_knockback" from="DamageTarget" to="." method="_on_knockback"]
